--- a/projects/vs2019/hldll.vcxproj
+++ b/projects/vs2019/hldll.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="..\..\dlls\items\items.cpp" />
     <ClCompile Include="..\..\dlls\lights.cpp" />
     <ClCompile Include="..\..\dlls\maprules.cpp" />
+    <ClCompile Include="..\..\dlls\misc\CClientFog.cpp" />
     <ClCompile Include="..\..\dlls\misc\CEnvModel.cpp" />
     <ClCompile Include="..\..\dlls\monstermaker.cpp" />
     <ClCompile Include="..\..\dlls\monsters.cpp" />
@@ -205,6 +206,7 @@
     <ClInclude Include="..\..\dlls\animation.h" />
     <ClInclude Include="..\..\dlls\basemonster.h" />
     <ClInclude Include="..\..\dlls\cbase.h" />
+    <ClInclude Include="..\..\dlls\CClientFog.h" />
     <ClInclude Include="..\..\dlls\cdll_dll.h" />
     <ClInclude Include="..\..\dlls\client.h" />
     <ClInclude Include="..\..\dlls\decals.h" />
